--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
+<!-- This is the document type declaration, specifying that this is an HTML5 document. -->
 <!DOCTYPE html>
+<!-- The root element of the HTML document, with the language set to English. -->
 <html lang="en">
 <head>
+    <!-- Specifies the character encoding for the document. -->
     <meta charset="UTF-8">
+    <!-- Ensures the page is responsive and scales correctly on different devices. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional portfolio of [Your Name], showcasing projects and skills.">
-    <title>[Your Name] - Portfolio</title>
+    <!-- Provides a description of the page for search engines. -->
+    <meta name="description" content="Professional portfolio of Rajan Kuwar, showcasing projects and skills.">
+    <!-- The title of the page, which appears in the browser's title bar or tab. -->
+    <title>Rajan Kuwar - Portfolio</title>
+    <!-- Links to an external CSS file for styling. -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- The header section, typically containing the navigation menu. -->
     <header>
         <nav>
+            <!-- An unordered list for the navigation links. -->
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -18,24 +27,31 @@
             </ul>
         </nav>
     </header>
+    <!-- The main content area of the page. -->
     <main>
+        <!-- The home section, introducing the portfolio. -->
         <section id="home">
             <h1>Welcome to My Portfolio</h1>
             <p>Hi, I'm Rajan Kuwar.</p>
         </section>
+        <!-- The about section, providing information about the portfolio owner. -->
         <section id="about">
             <h2>About Me</h2>
             <p>My Introduction</p>
         </section>
+        <!-- The projects section, showcasing the portfolio owner's work. -->
         <section id="projects">
             <h2>Projects</h2>
+            <!-- A container for the project cards, likely to be styled with CSS. -->
             <div class="project-grid">
+                <!-- An individual project card. -->
                 <div class="project-card">
                     <img src="project1.jpg" alt="Project 1">
                     <h3>Project 1</h3>
                     <p>A brief description of project 1.</p>
                     <a href="#">View Project</a>
                 </div>
+                <!-- Another project card. -->
                 <div class="project-card">
                     <img src="project2.jpg" alt="Project 2">
                     <h3>Project 2</h3>
@@ -45,8 +61,10 @@
                 <!-- Add more project cards as needed -->
             </div>
         </section>
+        <!-- The contact section, providing a way for visitors to get in touch. -->
         <section id="contact">
             <h2>Contact</h2>
+            <!-- A form for visitors to send a message. -->
             <form action="#" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
@@ -58,8 +76,9 @@
             </form>
         </section>
     </main>
+    <!-- The footer section, typically containing copyright information. -->
     <footer>
-        <p>&copy; [Year] [Your Name]. All rights reserved.</p>
+        <p>© 2025 Rajan Kuwar. All rights reserved.</p>
     </footer>
 </body>
 </html>
