Add skills section with responsive styling

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -44,6 +45,18 @@
         <section id="about">
             <h2>About Me</h2>
             <p>My Introduction</p>
+        </section>
+        <!-- Skills section -->
+        <section id="skills">
+            <h2>My Skills</h2>
+            <ul class="skills-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>Git</li>
+                <!-- Add more skills as needed -->
+            </ul>
         </section>
         <!-- Projects section -->
         <section id="projects">
