Add certificates section with responsive styling

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="#certificates">Certificates</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -56,6 +57,23 @@
                 <li>Python</li>
                 <li>Git</li>
                 <!-- Add more skills as needed -->
+            </ul>
+        </section>
+        <!-- Certificates section -->
+        <section id="certificates">
+            <h2>My Certificates</h2>
+            <ul class="certificates-list">
+                <li>
+                    <h3>Web Development Bootcamp</h3>
+                    <p>Udemy, 2023</p>
+                    <a href="#" target="_blank">View Certificate</a>
+                </li>
+                <li>
+                    <h3>Python Programming</h3>
+                    <p>Coursera, 2024</p>
+                    <a href="#" target="_blank">View Certificate</a>
+                </li>
+                <!-- Add more certificates as needed -->
             </ul>
         </section>
         <!-- Projects section -->
