--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="description" content="Professional portfolio of Rajan Kuwar, showcasing projects and skills.">
     <!-- Page title -->
     <title>Rajan Kuwar - Portfolio</title>
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Link to CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -122,9 +124,20 @@
             </form>
         </section>
     </main>
-    <!-- Footer -->
+    <!-- Footer with social icons -->
     <footer>
         <p>© 2025 Rajan Kuwar. All rights reserved.</p>
+        <div class="social-links">
+            <a href="mailto:your.rajan10kuwar@gmail.com" target="_blank" aria-label="Email">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/rajan-kuwar-8356982b2/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/rajan10kuwar" target="_blank" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
     </footer>
     <!-- Link to JavaScript -->
     <script src="script.js"></script>
