--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="description" content="Professional portfolio of Rajan Kuwar, showcasing projects and skills.">
     <!-- Page title -->
     <title>Rajan Kuwar - Portfolio</title>
+    <!-- Google Fonts for bold typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Link to CSS -->
@@ -128,10 +130,10 @@
     <footer>
         <p>© 2025 Rajan Kuwar. All rights reserved.</p>
         <div class="social-links">
-            <a href="mailto:your.rajan10kuwar@gmail.com" target="_blank" aria-label="Email">
+            <a href="mailto:your.email@gmail.com" target="_blank" aria-label="Email">
                 <i class="fas fa-envelope"></i>
             </a>
-            <a href="https://www.linkedin.com/in/rajan-kuwar-8356982b2/" target="_blank" aria-label="LinkedIn">
+            <a href="https://www.linkedin.com/in/your-profile" target="_blank" aria-label="LinkedIn">
                 <i class="fab fa-linkedin"></i>
             </a>
             <a href="https://github.com/rajan10kuwar" target="_blank" aria-label="GitHub">
