--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Particle background canvas -->
+    <div id="particles-js"></div>
     <!-- Header with navigation -->
     <header>
         <nav>
@@ -141,7 +143,8 @@
             </a>
         </div>
     </footer>
-    <!-- Link to JavaScript -->
+    <!-- Link to particles.js and custom JavaScript -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
