--- a/index.html
+++ b/index.html
@@ -53,17 +53,71 @@
             <h2>About Me</h2>
             <p>My Introduction</p>
         </section>
-        <!-- Skills section -->
+        <!-- Skills section with flipping boxes -->
         <section id="skills">
             <h2>My Skills</h2>
-            <ul class="skills-list">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Python</li>
-                <li>Git</li>
-                <!-- Add more skills as needed -->
-            </ul>
+            <div class="skills-grid">
+                <!-- Programming Languages box -->
+                <div class="skill-box">
+                    <div class="skill-front">
+                        <i class="fas fa-code"></i>
+                        <h3>Programming Languages</h3>
+                    </div>
+                    <div class="skill-back">
+                        <div class="skill-icons">
+                            <i class="fab fa-js" title="JavaScript"></i>
+                            <i class="fab fa-python" title="Python"></i>
+                            <i class="fab fa-java" title="Java"></i>
+                            <i class="fas fa-database" title="SQL"></i>
+                            <i class="fas fa-code" title="C"></i>
+                            <i class="fas fa-code" title="C++"></i>
+                            <i class="fab fa-html5" title="HTML"></i>
+                            <i class="fab fa-css3" title="CSS"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- Web Frameworks box -->
+                <div class="skill-box">
+                    <div class="skill-front">
+                        <i class="fas fa-laptop-code"></i>
+                        <h3>Web Frameworks</h3>
+                    </div>
+                    <div class="skill-back">
+                        <div class="skill-icons">
+                            <i class="fab fa-react" title="React"></i>
+                            <i class="fab fa-node-js" title="Node.js"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- Tools box -->
+                <div class="skill-box">
+                    <div class="skill-front">
+                        <i class="fas fa-tools"></i>
+                        <h3>Tools</h3>
+                    </div>
+                    <div class="skill-back">
+                        <div class="skill-icons">
+                            <i class="fab fa-git-alt" title="Git"></i>
+                            <i class="fas fa-code-branch" title="VS Code"></i>
+                            <i class="fab fa-docker" title="Docker"></i>
+                            <i class="fab fa-github" title="GitHub"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- CS Concepts box -->
+                <div class="skill-box">
+                    <div class="skill-front">
+                        <i class="fas fa-brain"></i>
+                        <h3>CS Concepts</h3>
+                    </div>
+                    <div class="skill-back">
+                        <div class="skill-icons">
+                            <i class="fas fa-sitemap" title="Data Structures"></i>
+                            <i class="fas fa-cogs" title="Algorithms"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Certificates section -->
         <section id="certificates">
