Add buttons to scroll to top and bottom

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Link to CSS -->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Particle background canvas -->
@@ -41,6 +42,12 @@
             </ul>
         </nav>
     </header>
+    <button class="scroll-arrow top-arrow" aria-label="Scroll to bottom">
+  <i class="fas fa-arrow-down"></i>
+</button>
+<button class="scroll-arrow bottom-arrow" aria-label="Scroll to top">
+  <i class="fas fa-arrow-up"></i>
+</button>
     <!-- Main content -->
     <main>
         <!-- Home section -->
