--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- HTML5 document type -->
 <!DOCTYPE html>
 <!-- Root element, language set to English -->
 <html lang="en">
@@ -31,23 +30,47 @@
                 <span></span>
                 <span></span>
             </button>
-            <!-- Navigation links -->
+            <!-- Navigation links with description boxes -->
             <ul class="nav-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#certificates">Certificates</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li>
+                    <a href="#home">Home</a>
+                    <!-- Description box for Home -->
+                    <div class="nav-description">Welcome to my portfolio.</div>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                    <!-- Description box for About -->
+                    <div class="nav-description">Learn more about me.</div>
+                </li>
+                <li>
+                    <a href="#skills">Skills</a>
+                    <!-- Description box for Skills -->
+                    <div class="nav-description">Explore my technical skills.</div>
+                </li>
+                <li>
+                    <a href="#certificates">Certificates</a>
+                    <!-- Description box for Certificates -->
+                    <div class="nav-description">View my certifications.</div>
+                </li>
+                <li>
+                    <a href="#projects">Projects</a>
+                    <!-- Description box for Projects -->
+                    <div class="nav-description">Check out my projects.</div>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                    <!-- Description box for Contact -->
+                    <div class="nav-description">Get in touch with me.</div>
+                </li>
             </ul>
         </nav>
     </header>
     <button class="scroll-arrow top-arrow" aria-label="Scroll to bottom">
-  <i class="fas fa-arrow-down"></i>
-</button>
-<button class="scroll-arrow bottom-arrow" aria-label="Scroll to top">
-  <i class="fas fa-arrow-up"></i>
-</button>
+        <i class="fas fa-arrow-down"></i>
+    </button>
+    <button class="scroll-arrow bottom-arrow" aria-label="Scroll to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
     <!-- Main content -->
     <main>
         <!-- Home section -->
