Add icon for nav items

--- a/index.html
+++ b/index.html
@@ -33,32 +33,32 @@
             <!-- Navigation links with description boxes -->
             <ul class="nav-menu">
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="#home"><i class="fas fa-home nav-icon" aria-hidden="true"></i> Home</a>
                     <!-- Description box for Home -->
                     <div class="nav-description">Welcome to my portfolio.</div>
                 </li>
                 <li>
-                    <a href="#about">About</a>
+                    <a href="#about"><i class="fas fa-user nav-icon" aria-hidden="true"></i> About</a>
                     <!-- Description box for About -->
                     <div class="nav-description">Learn more about me.</div>
                 </li>
                 <li>
-                    <a href="#skills">Skills</a>
+                    <a href="#skills"><i class="fas fa-tools nav-icon" aria-hidden="true"></i> Skills</a>
                     <!-- Description box for Skills -->
                     <div class="nav-description">Explore my technical skills.</div>
                 </li>
                 <li>
-                    <a href="#certificates">Certificates</a>
+                    <a href="#certificates"><i class="fas fa-certificate nav-icon" aria-hidden="true"></i> Certificates</a>
                     <!-- Description box for Certificates -->
                     <div class="nav-description">View my certifications.</div>
                 </li>
                 <li>
-                    <a href="#projects">Projects</a>
+                    <a href="#projects"><i class="fas fa-folder nav-icon" aria-hidden="true"></i> Projects</a>
                     <!-- Description box for Projects -->
                     <div class="nav-description">Check out my projects.</div>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                   <a href="#contact"><i class="fas fa-envelope nav-icon" aria-hidden="true"></i> Contact</a>
                     <!-- Description box for Contact -->
                     <div class="nav-description">Get in touch with me.</div>
                 </li>
