Add scroll-controlled wheel animation

--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
     <button class="scroll-arrow bottom-arrow" aria-label="Scroll to top">
         <i class="fas fa-arrow-up"></i>
     </button>
+
+    <div class="wheel-container">
+    <div class="wheel-wrapper">
+      <svg class="wheel" width="40" height="40" viewBox="0 0 40 40">
+        <circle cx="20" cy="20" r="18" stroke="#00eaff" stroke-width="4" fill="none" />
+       <line x1="20" y1="0" x2="20" y2="40" stroke="#00eaff" stroke-width="2" />
+        <line x1="0" y1="20" x2="40" y2="20" stroke="#00eaff" stroke-width="2" />
+        <line x1="4" y1="4" x2="36" y2="36" stroke="#00eaff" stroke-width="2" />
+        <line x1="4" y1="36" x2="36" y2="4" stroke="#00eaff" stroke-width="2" />
+      </svg>
+    </div>
+  </div>
     <!-- Main content -->
     <main>
         <!-- Home section -->
