Update home section to make it more dynamic and engaging

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <main>
         <!-- Home section -->
         <section id="home">
-            <h1>Welcome to My Portfolio</h1>
-            <p>Hi, I'm Rajan Kuwar.</p>
+            <h1>Hi there, Welcome!</h1>
+            <p>I'm Rajan Kuwar, a <span id="role"></span></p>
         </section>
         <!-- About section -->
         <section id="about">
