Add information in about me section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+     <!-- Gradient overlay -->
+    <div class="gradient-overlay"></div>
     <!-- Particle background canvas -->
     <div id="particles-js"></div>
     <!-- Header with navigation -->
@@ -93,7 +95,11 @@
         <!-- About section -->
         <section id="about">
             <h2>About Me</h2>
-            <p>My Introduction</p>
+            <p>Hi! I’m a dedicated <strong>Computer Science student</strong> and <strong>Web Developer</strong> with a deep interest in technology and problem-solving. 
+                My academic journey and hands-on projects have equipped me with a strong foundation in key computer science concepts such as algorithms, data structures,
+                and web development frameworks.</p>
+            <p>I’m excited to join a forward-thinking team where I can contribute my technical expertise and enthusiasm to impactful projects. Let’s connect to explore how I can bring value to your organization!
+    </p>
         </section>
         <!-- Skills section with flipping boxes -->
         <section id="skills">
