--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- Link to CSS -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Typed.js library -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
      <!-- Gradient overlay -->
@@ -89,8 +91,9 @@
     <main>
         <!-- Home section -->
         <section id="home">
-            <h1>Hi there, Welcome!</h1>
-            <p>I'm Rajan Kuwar, a <span id="role"></span></p>
+            <h1><span id="greeting" class="typed-greeting"></span></h1>
+            <p>I'm Rajan Kuwar, a <span id="role" class="typed"></span></p>
+            <p class="tagline">Building innovative solutions with code.</p>
         </section>
         <!-- About section -->
         <section id="about">
