Add certificate and custom pointer

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
+   <div class="star-pointer" id="main-star"></div>
+    <div class="star-particle orbit1"></div>
+    <div class="star-particle orbit2"></div>
+    <div class="star-particle orbit3"></div>
+
     <div class="wheel-container">
     <div class="wheel-wrapper">
       <svg class="wheel" width="40" height="40" viewBox="0 0 40 40">
@@ -175,9 +180,9 @@
             <h2>My Certificates</h2>
             <ul class="certificates-list">
                 <li>
-                    <h3>Web Development Bootcamp</h3>
-                    <p>Udemy, 2023</p>
-                    <a href="#" target="_blank">View Certificate</a>
+                    <h3>Intro to Web Development</h3>
+                    <p>CodePath, [Spring 2024] - Mastered HTML, CSS, and JavaScript through hands-on projects.</p>
+                    <a href="Web1_Certificate.pdf" target="_blank">View Certificate</a>
                 </li>
                 <li>
                     <h3>Python Programming</h3>
@@ -237,10 +242,10 @@
     <footer>
         <p>© 2025 Rajan Kuwar. All rights reserved.</p>
         <div class="social-links">
-            <a href="mailto:your.email@gmail.com" target="_blank" aria-label="Email">
+            <a href="rajan10kuwar@gmail.com.email@gmail.com" target="_blank" aria-label="Email">
                 <i class="fas fa-envelope"></i>
             </a>
-            <a href="https://www.linkedin.com/in/your-profile" target="_blank" aria-label="LinkedIn">
+            <a href="https://www.linkedin.com/in/rajan-kuwar-8356982b2/" target="_blank" aria-label="LinkedIn">
                 <i class="fab fa-linkedin"></i>
             </a>
             <a href="https://github.com/rajan10kuwar" target="_blank" aria-label="GitHub">
