Add Google Cybersecurity Professiona Certificate V2

--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                     <a href="Web1_Certificate.pdf" target="_blank">View Certificate</a>
                 </li>
                 <li>
-                    <h3>Python Programming</h3>
-                    <p>Coursera, 2024</p>
-                    <a href="#" target="_blank">View Certificate</a>
+                    <h3>Google Cybersecurity Professional Certificate V2</h3>
+                    <p>Coursera, 2025 -  Gained expertise in cybersecurity fundamentals, including threat detection and network security.</p>
+                    <a href="GoogleCybersecurityProfessionalCertificateV2_Badge20250808-30-krcopx.pdf" target="_blank">View Certificate</a>
                 </li>
                 <!-- Add more certificates as needed -->
             </ul>
