Add intro to post-quantum cryptography certificate

--- a/index.html
+++ b/index.html
@@ -186,8 +186,13 @@
                 </li>
                 <li>
                     <h3>Google Cybersecurity Professional Certificate V2</h3>
-                    <p>Coursera, 2025 -  Gained expertise in cybersecurity fundamentals, including threat detection and network security.</p>
+                    <p>Coursera, August 2025 -  Gained expertise in cybersecurity fundamentals, including threat detection and network security.</p>
                     <a href="GoogleCybersecurityProfessionalCertificateV2_Badge20250808-30-krcopx.pdf" target="_blank">View Certificate</a>
+                </li>
+                <li>
+                    <h3>Introduction to post quantum Cryptography</h3>
+                    <p>USMx, University of Maryland, June 2025 - Learned quantum-safe encryption techniques through lectures and hands-on labs.</p>
+                    <a href="Intro_to_PQC_Cert.pdf" target="_blank">View Certificate</a>
                 </li>
                 <!-- Add more certificates as needed -->
             </ul>
